xidlc/tests/invalid/http_security_conflict_no_security.idl
#pragma xidlc package xidlc
#pragma xidlc version v1.0.0

interface InvalidConflictingSecurityService {
    @no_security
    @http_bearer
    @get(path = "/reports")
    string list_reports();
};
